# gst-python-ml

./: COPYING  Dockerfile  Dockerfile_fedora42  Dockerfile_ubuntu24  Dockerfile_ubuntu26  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
data/: botsort_people_reid.yaml  bytetrack_ball.yaml
demos/python/: coalescehistory.py
docs/: index.html  release.md
pipelines/: caption_dual_stream.py  filter_dual_stream.py
plugins/python/: action.py  alert.py  anomaly.py  base_aggregator.py  base_caption.py  base_classifier.py  base_llm.py  base_objectdetector.py  base_separate.py  base_transcribe.py  base_transform.py  base_translate.py  base_tts.py  birds_eye.py  caption.py  caption_phi.py  caption_qwen.py  clap.py  classifier.py  clip.py  coquitts.py  demo_soccer.py  demucs.py  depth.py  embedding.py  engine_helper.py  face.py  football_analyzer.py  inference.py  kafkasink.py  llm.py  llm_stream_filter.py  mariantranslate.py  maskrcnn.py  model_engine_helper.py  muxed_buffer_processor.py  objectdetector.py  ocr.py  optical_flow.py  overlay.py  (+17 more)
plugins/python/birdseye/perspective_transform/data/: two_aligned_dataset.py
plugins/python/data/soccer/: app.py
plugins/python/engine/: candle_engine.py  device_queue_pool.py  engine_factory.py  engine_helper.py  engine_manager.py  executorch_engine.py  jax_engine.py  litert_engine.py  llamacpp_engine.py  ml_engine.py  mlx_engine.py  onnx_engine.py  openvino_engine.py  pytorch_engine.py  pytorch_vision_engine.py  tensorflow_engine.py  tinygrad_engine.py  tvm_engine.py
plugins/python/log/: global_logger.py  gst_logger.py  logger.py  logger_factory.py
plugins/python/overlay_helper/: overlay_cairo.py  overlay_opengl.py  overlay_skia.py  overlay_utils.py  overlay_utils_interface.py  overlay_vulkan.py
plugins/python/utils/: analytics_utils.py  caption_utils.py  detection_decoder.py  format_converter.py  gst_feature_manager.py  metadata.py  muxed_buffer_processor.py  runtime_utils.py
requirements/: language.txt
tests/: test_engines.py
utils/: loop.py  symlink_dir.py
