[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-python-ml"
version = "1.0.5"
description = "An ML package for GStreamer"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["COPYING"]
authors = [{name = "Aaron Boxer", email = "aaron.boxer@collabora.com"}]
urls.Homepage = "https://github.com/collabora/gst-python-ml"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygobject",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "transformers==4.56.2",
    "qwen-vl-utils[decord]==0.0.8",
    "autoawq==0.2.9",
    "accelerate==1.12.0",
    "bitsandbytes==0.46.1",
    "opencv-python==4.10.0.84",
    "opencv-contrib-python==4.10.0.84",
    "numpy",
    "huggingface-hub",
    "lap",
    "pycairo",
    "ultralytics",
    "confluent_kafka",
    # "flash-attn",
    "diffusers",
    "sentencepiece",
    "protobuf",
    "whisperspeech",
    "webdataset",
    "easydict",
    "pyflann-py3",
    "soundfile",
    "speechbrain",
    "pyopengl"
]

[project.optional-dependencies]
onnx = [
    "onnxruntime",
]
onnx-gpu = [
    "onnxruntime-gpu",
]
tvm = [
    "apache-tvm",
]
tinygrad = [
    "tinygrad",
]
vad = [
    "pysilero",
    "pysilero-vad",
    "faster-whisper",
]

# Optional
[dependency-groups]
test = [
    "pytest>=7.0",
    # Add other test tools
]
dev = [
    {include-group = "test"},
    # Add linting, etc., e.g., "ruff"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["plugins/python"]